tests/ui/const-generics/adt_const_params/non_valtreeable_const_arg-1.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/non_valtreeable_const_arg-1.rs:6:25
   |
LL | struct Checked<const F: fn()>;
   |                         ^^^^
   |
   = note: the only supported types are integers, `bool`, and `char`

error: aborting due to 1 previous error

